Java Memory, GC, String pools